feat: replace functional module with report module to save cucumber report
