# web/router/index.js
@@ -8,6 +8,6 @@ router.get('/history', require('./api/history/get'));
 router.post('/history', require('./api/history/post'));
 router.post('/visual', require('./api/visual/post'));
 router.put('/visual', require('./api/visual/put'));
-router.post('/functional', require('./api/functional/post'));
+router.post('/report', require('./api/report/post'));
 
 module.exports = router;
